src/components/Movie/styles.scss
@import '../../styles/variables.scss';

$movie-max-width: 230px;

.Movie {
  position: relative;
  display: flex;
  justify-content: center;
}

.Movie__poster {
  display: block;
}

.Movie__title {
  display: none;
}

.Movie__link {
  position: relative;
  width: 100%;

  &::after {
    position: absolute;
    display: block;
    transition: all 0.2s ease-in;
    content: '';
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    height: 100%;
    border-radius: $space-2;
    opacity: 0;
    border: $space-1 solid color(primary);
  }

  &:hover::after {
    opacity: 1;
  }
}

